fixed email script and header collapse menu

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,24 +8,16 @@
 #bannerFB > h2{
  color: white;
 }
-
 #bannerRow{
     margin-top: 70px;
-    height: 200px;
     border-width: 1px 1px 1px 1px;
     border-style: solid;
     border-color: white;
    
 }
-
-#bannerTitle{
-    padding-right: 150px;
-}
-
 #headNavbar{
     height: 55px;
 }
-
 .headNavbarShadow{
     position: fixed;
     width: 100%;
@@ -39,6 +31,14 @@ box-shadow: 0px 0px 45px -1px rgba(0,0,0,0.75);
     width: 300px;
 }
 #collapsed{
-    z-index: 10000;
+    
+    background-color: whitesmoke;
+    backface-visibility: hidden;
+    opacity: 1;
+    z-index: 999;
    
+}
+
+#collapsed > li {
+    margin-left: 20px;
 }
